--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ requires = ["setuptools"]
 [project]
 name = "labtools"
 version = '0.0.5'
-requires-python = ">=3.11"
+#requires-python = ">=3.11"
+requires-python = ">=3.9"
 license = {text = "MIT"}
 
 dependencies = [
